<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.betrisey.suzanne.androidproject.Intervention">


    <item android:id="@+id/action_ajouter_intervention"
        android:title="@string/action_ajouter_intervention"
        android:orderInCategory="10"
        app:showAsAction="never" />
    <item android:id="@+id/action_supprimer_intervention"
        android:title="@string/action_supprimer_intervention"
        android:orderInCategory="20"
        app:showAsAction="never" />
    <item android:id="@+id/action_parametre"
        android:title="@string/action_parametre"
        android:orderInCategory="60"
        app:showAsAction="never" />

</menu>
