<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.betrisey.suzanne.androidproject.Parametre">

    <LinearLayout
        android:id="@+id/regionsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textDateNaissance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/editRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"/>

        <Spinner
            android:id="@+id/spinnerRegions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="37dp"
            android:entries="@array/region">
        </Spinner>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/languesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textDateNaissance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/editLangue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/langue"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup">

            <RadioButton
                android:id="@+id/radioFrancais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/francais"
                android:layout_marginLeft="37dp"/>

            <RadioButton
                android:id="@+id/radioAllemand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/allemand"
                android:layout_marginLeft="37dp"/>

        </RadioGroup>



    </LinearLayout>

</LinearLayout>
