<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.betrisey.suzanne.androidproject.AfficherIntervention">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/darkRed"
        android:id="@+id/frameLayout"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/icon_delete"
            android:layout_gravity="left|center_vertical"
            android:src="@drawable/icon_delete"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="@color/darkRed"
            android:clickable="true"
            android:onClick="buttonDelete"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/icon_edit"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/icon_edit"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="@color/darkRed"
            android:clickable="true"
            android:onClick="buttonEdit"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp" />

        </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frameLayout"
        android:background="@color/white"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:id="@+id/textView"
            android:textSize="18dp"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDate"
            android:textColor="@color/grey"
            android:textSize="18dp"
            android:layout_alignTop="@+id/textView"
            android:layout_toEndOf="@+id/textViewQuantite"
            android:layout_alignLeft="@+id/textViewQuantite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:id="@+id/textView21"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:textSize="18dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRegion"
            android:layout_alignTop="@+id/textView21"
            android:layout_alignLeft="@+id/textViewDate"
            android:textColor="@color/grey"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantite"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView21"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="25dp"
            android:textSize="18dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewQuantite"
            android:layout_alignTop="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:textColor="@color/grey"
            android:textSize="18dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/groupe"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:textSize="18dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewGroupe"
            android:layout_alignTop="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:textColor="@color/grey"
            android:textSize="18dp"
            android:layout_alignLeft="@+id/textViewQuantite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView3"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="25dp"
            android:textSize="18dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDescription"
            android:layout_alignTop="@+id/textView4"
            android:layout_alignLeft="@+id/textViewQuantite"
            android:layout_alignStart="@+id/textView"
            android:layout_centerHorizontal="true"
            android:textColor="@color/grey"
            android:textSize="18dp"
            android:maxWidth="180dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pochette"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="25dp"
            android:textSize="18dp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/pochettes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"></LinearLayout>


    </RelativeLayout>

</RelativeLayout>
